widget/assets/css/media.css
.audio-player {
    overflow: hidden!important;
    position: fixed;
    width: 100%;
    height: 100%;
}

.holder.now-playing .media-center-plugin {
    position: relative;
    height: 100%;
    padding-bottom: calc(20px + env(safe-area-inset-bottom));
    max-width: 660px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.media-header-link {
    flex-shrink: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0;
}

.media-header-link .btn.btn-icon {
    margin-left: auto;
}

.btn.btn-icon {
    background-color: transparent;
    border: 0;
    width: 42px;
    height: 42px;
    display: flex;
    align-items: center;
    border-radius: 50%;
    flex-shrink: 0;
    font-size: 20px;
    padding: 0;
}

.holder.now-playing .media-holder, .more-info .media-holder {
    display: table;
    text-align: center;
    width: 220px;
    height: 220px;
    max-width: 220px;
    max-height: 220px;
    margin: 0 auto;
}

@media (max-height: 600px) { 
    .holder.now-playing .media-holder, .holder.now-playing .media-holder .media-inner img {
        max-height: 120px;
        max-width: 120px;
    }
}

.holder.now-playing .media-holder .media-inner, .more-info .media-holder .media-inner {
    max-width: 220px;
    max-height: 220px;
    display: table-cell;
    vertical-align: middle;
}

.holder.now-playing .media-holder .media-inner img {
    max-width: 100%;
    max-height: 100%;
    border-radius: 8px;
    width: 240px;
    height: 240px;
    object-fit: cover;
    box-shadow: 0 0 16px rgba(0,0,0,.5);
}

.btn.btn-icon, .holder.now-playing .media-player-info {
    padding: 24px 0 4px;
    justify-content: center;
}

.media-player-btns {
    padding: 24px 0;
    justify-content: space-between;
}

.holder.now-playing .media-player-info, .media-header-link, .media-player-btns, .slider {
    width: 100%;
    max-width: 600px;
    margin: 0 auto;
}

.holder.now-playing .media-player-info, .media-player-btns {
    flex-shrink: 0;
    display: flex;
    align-items: center;
}

.holder.now-playing .media-player-action-btns span, .holder.now-playing .media-player-btns span, .holder.now-playing .media-player-info span {
    font-size: 18px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    width: 48px;
    border-radius: 50%;
    height: 48px;
    cursor: pointer;
}

.btn.btn-icon {
    background-color: transparent;
    border: 0;
    width: 42px;
    height: 42px;
    display: flex;
    align-items: center;
    border-radius: 50%;
    flex-shrink: 0;
    font-size: 20px;
    padding: 0;
}

.holder.now-playing .media-player-info .media-title {
    margin: 0 12px;
}

.ellipsis {
    display: block;
}

.slider {
    padding: 0 4px;
}


@media (max-height: 600px) {
.holder.now-playing .media-player-btns .icon.icon-sm {
    top: -5px;
}
}

.holder.now-playing .media-player-btns .icon.icon-sm {
    font-size: 22px;
    position: relative;
    color: #999;
}

@media (max-height: 600px) {
.holder.now-playing .media-player-btns .icon {
    font-size: 32px;
}
}

.holder.now-playing .media-player-btns span {
    transition: none;
}

.holder.now-playing .media-player-btns .player-btns {
    display: flex;
    align-items: center;
}

.audio-plyer input[type=range] {
	-webkit-appearance: none;
	height: 32px;
    width: 100%;
    background: unset;
}

.audio-plyer input[type=range]:focus {
	outline: none;
}

.audio-plyer input[type=range]::-webkit-slider-runnable-track {
	width: 100%;
	height: 3px;
	cursor: pointer;
	animate: 0.2s;
	background: #ffffff;
}

.audio-plyer input[type=range]::-webkit-slider-thumb {
	height: 9px;
	width: 9px;
	background: #ffffff;
	cursor: pointer;
	-webkit-appearance: none;
	margin-top: -2.7px;
	border-radius: 4.5px;
}

.audio-plyer input[type=range]:focus::-webkit-slider-runnable-track {
	/*background: #367ebd;*/
}

.audio-plyer input[type=range]::-moz-range-track {
	width: 100%;
	height: 10px;
	cursor: pointer;
	animate: 0.2s;
	background: #ffffff;
}

.audio-plyer input[type=range]::-moz-range-thumb {
	height: 20px;
	width: 20px;
	background: #ffffff;
	cursor: pointer;
	-webkit-appearance: none;
	margin-top: -5px;
	border-radius: 10px;
}

.audio-plyer input[type=range]::-ms-track {
	width: 100%;
	height: 8.4px;
	cursor: pointer;
	animate: 0.2s;
	background: transparent;
	border-color: transparent;
	border-width: 16px 0;
	color: transparent;
}

.audio-plyer input[type=range]::-ms-fill-lower {
	background: #2a6495;
	border: 0.2px solid #010101;
	border-radius: 2.6px;
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}

.audio-plyer input[type=range]::-ms-fill-upper {
	background: #3071a9;
	border: 0.2px solid #010101;
	border-radius: 2.6px;
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
}

.audio-plyer input[type=range]::-ms-thumb {
	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
	border: 1px solid #000000;
	height: 36px;
	width: 16px;
	border-radius: 3px;
	background: #ffffff;
	cursor: pointer;
}

.audio-plyer input[type=range]:focus::-ms-fill-lower {
	background: #3071a9;
}

.audio-player input[type=range]:focus::-ms-fill-upper {
	background: #367ebd;
}
/* End of audio player style*/
.slider{
	width: 100%;
	max-width: 600px;
	margin: 0 auto;
	padding: 0 4px;
}
.slider .time-indicator span{
	font-size: 12px;
	color: #fff;
	opacity: .7;
	margin: 0 6px;
}

@media (max-height: 600px) {
    .holder.now-playing .media-player-btns .icon.icon-sm {
        top: -5px;
    }
}

.holder.now-playing .media-player-btns .player-btns .btn-primary {
    margin: 0 16px;
}

button.btn-icon.btn-lg {
    width: 64px;
    height: 64px;
    padding: 0;
    box-shadow: 0 4px 16px rgba(0,0,0,.5);
}

.holder.now-playing .media-player-action-btns {
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: 600px;
    margin: 0 auto;
}

.holder.now-playing .media-player-action-btns span {
    opacity: .5;
}

.whiteTheme, .whiteTheme:hover, .whiteTheme:focus {
    color: #fff !important;
}

@media (max-height: 600px)
{
    .holder.now-playing .media-holder, .holder.now-playing .media-holder .media-inner img {
        max-height: 120px;
        max-width: 120px;
    }
}

